--- a/hai-bibliography.qmd
+++ b/hai-bibliography.qmd
@@ -22,6 +22,10 @@ library(gt)
 
 haibib <- tribble(
   ~Paper, ~Link, ~Authors, ~Year, ~Venue, ~Summary,
+  "To Engage or Not to Engage with AI for Critical Judgments: How Professionals Deal with Opacity When Using AI for Medical Diagnosis", "https://doi.org/10.1287/orsc.2021.1549", "Sarah Lebovitz, Hila Lifshitz-Assaf, Natalia Levina", 2022, "Org. Science", "<p>Over 10 months of ethnographic fieldwork in a large US hospital, Lebovtiz et al. report on the use of three different AI tools by radiologists in lung cancer, breast cancer, and bone age measurement imaging departments. The main finding that the authors put forward is the concept of “AI interrogation practices.” These refer to the extra work radiologists put in to build an understanding of a model’s predictions when they diverge from their own judgment. Importantly, not all radiologists across the three departments employed interrogation practices; the authors suggest that future research should explore why this is the case.<p>
+  
+  <p>There are a few trajectories left unanswered. The study showed that there were a greater number of occurrences when the radiologists’ judgments differed from the AI tools. How does the skewed ratio of convergences to divergences affect the radiologists’ experiences with the tools? Divergences can also take multiple forms. There may be instances when the tool identifies a nodule, for example, in an image, but the radiologist does not; and vice versa, the tool may not pick up anything anomalous in an image, whereas the radiologist notices an indication of cancerous cells. How did the actions of radiologists vary across these two types of divergence? Lastly, it would be interesting to explore whether the radiologists who performed the “interrogation practices” helped their patients achieve better health outcomes.<p>",
+  
   "A Human-Centered Evaluation of a Deep Learning System Deployed in Clinics for the Detection of Diabetic Retinopathy", "https://doi.org/10.1145/3313831.3376718", "Beede, Emma and Baylor, Elizabeth and Hersch, Fred and Iurchenko, Anna and Wilcox, Lauren and Ruamviboonsuk, Paisan and Vardoulakis, Laura M.", 2020, "CHI", "This paper reports on a contextual evaluation of a deep learning system used for diabetic retinopathy detection in health clinics in Thailand. The authors conduct pre- and post-deployment observations and interviews to understand the nurses workflow with and without the DL system, and evaluate the system’s performance as it is used in a clinical setting. The study points to the importance of contextual evaluations, as they can reveal social and environmental factors which impact model performance that would otherwise be abstracted from in a laboratory setting.",
   
   "“Brilliant AI Doctor” in Rural Clinics: Challenges in AI-Powered Clinical Decision Support System Deployment", "https://doi.org/10.1145/3411764.3445432", "Wang, Dakuo and Wang, Liuping and Zhang, Zhan and Wang, Ding and Zhu, Haiyi and Gao, Yvonne and Fan, Xiangmin and Tian, Feng", 2021, "CHI", "<p>This paper reports on a field study with clinicians in rural China who use a AI clinical decision support system during diagnosis. Their results provide an empirical description of how the use of AI-CDSS in rural clinics is shaped by specific policy, institutional, and medical factors (e.g., there is high demand at rural clinics in China, health care policy limits what services smaller clinics can provide) and outline how clinicians perceive the use of the AI-CDSS.<p>
