--- a/hai-bibliography.qmd
+++ b/hai-bibliography.qmd
@@ -22,6 +22,10 @@ library(gt)
 
 haibib <- tribble(
   ~Paper, ~Link, ~Authors, ~Year, ~Venue, ~Summary,
+  "Evaluating the Promise of Human-Algorithm Collaborations in Everyday Work Practices", "https://doi.org/10.1145/3359245", "Wolf, Christine and Blomberg, Jeanette", 2019, "CSCW", "<p>This paper presents results on the design and evaluation of an NLP tool to support IT architects during the requirements definition stage of solution design projects. Their results focus on three activities supported by the tool, highlighting that the positive expectations held by the architects are underlined by the challenges they currently experience. For example, the architects relish the potential for ML support on a laborious task, but note that the current design of the tool does not facilitate coordination amongst teammates and are concerned that the tool — based on data from historical cases — limits their ability to propose solutions that align with emerging market trends. One of the main takeaways the authors draw from their findings is that ML should not be envisioned as a tool to supplant human decision-making; rather, the capabilities of ML and those of humans should complement one another, accounting for the other’s deficiencies.<p>
+  
+  <p>This paper provides several solid examples for how the design of ML-based applications do not support the work practices of the IT architects. The authors go at lengths to signal the continuity between their work and past studies on “situated work practices,” as they call it. It leaves me wondering what aspects of ML make the problem of designing for practices any different or more difficult for traditional software systems.<p>",
+  
   "To Engage or Not to Engage with AI for Critical Judgments: How Professionals Deal with Opacity When Using AI for Medical Diagnosis", "https://doi.org/10.1287/orsc.2021.1549", "Sarah Lebovitz, Hila Lifshitz-Assaf, Natalia Levina", 2022, "Org. Science", "<p>Over 10 months of ethnographic fieldwork in a large US hospital, Lebovtiz et al. report on the use of three different AI tools by radiologists in lung cancer, breast cancer, and bone age measurement imaging departments. The main finding that the authors put forward is the concept of “AI interrogation practices.” These refer to the extra work radiologists put in to build an understanding of a model’s predictions when they diverge from their own judgment. Importantly, not all radiologists across the three departments employed interrogation practices; the authors suggest that future research should explore why this is the case.<p>
   
   <p>There are a few trajectories left unanswered. The study showed that there were a greater number of occurrences when the radiologists’ judgments differed from the AI tools. How does the skewed ratio of convergences to divergences affect the radiologists’ experiences with the tools? Divergences can also take multiple forms. There may be instances when the tool identifies a nodule, for example, in an image, but the radiologist does not; and vice versa, the tool may not pick up anything anomalous in an image, whereas the radiologist notices an indication of cancerous cells. How did the actions of radiologists vary across these two types of divergence? Lastly, it would be interesting to explore whether the radiologists who performed the “interrogation practices” helped their patients achieve better health outcomes.<p>",
