--- a/hai-bibliography.qmd
+++ b/hai-bibliography.qmd
@@ -22,6 +22,10 @@ library(gt)
 
 haibib <- tribble(
   ~Paper, ~Link, ~Authors, ~Year, ~Venue, ~Summary,
+  "Improving Human-AI Partnerships in Child Welfare: Understanding Worker Practices, Challenges, and Desires for Algorithmic Decision Support", "https://doi.org/10.1145/3491102.3517439", "Kawakami, Anna and Sivaraman, Venkatesh and Cheng, Hao-Fei and Stapleton, Logan and Cheng, Yanghuidi and Qing, Diana and Perer, Adam and Wu, Zhiwei Steven and Zhu, Haiyi and Holstein, Kenneth", 2022, "CHI", "<p>This paper reports on one of the first qualitative studies on how workers at the Allegheny County Office of Children, Youth, and Families engage with the Allegheny Family Screening Tool (AFST). The AFST is a machine learning application for child maltreatment call screeners to use to assess risk and prioritise referred cases. Drawing on contextual inquiries and semi-structured interviews conducted over two sessions, the researchers offer four findings. Workers draw upon contextual information regarding a case that is not captured in the model to calibrate their reliance on the tool’s output, employ informal strategies to learn about the model’s behaviour, are influenced by organisational pressures and incentives to use the tool, and perceive there to be a misalignment between the output of their decision and the predictive target of the model.<p>
+
+<p>The study provides a strong case for how decisions at both the level of the organisation and model design influence workers’ reliance on the tool, and show that practices and experiences with a tool such as AFST are variegated even within the same organisation. Also, I like how they used their two modes of data collection to identify an inconsistency in workers’ perspectives voiced in the interviews and their behaviour observed through the contextual inquiries. Yet, the duration of the study was short (only 2 days of observations an interviews over a 2 week period), so I wonder what other consistencies they may not have been around to observe.<p>",
+
   "Evaluating the Promise of Human-Algorithm Collaborations in Everyday Work Practices", "https://doi.org/10.1145/3359245", "Wolf, Christine and Blomberg, Jeanette", 2019, "CSCW", "<p>This paper presents results on the design and evaluation of an NLP tool to support IT architects during the requirements definition stage of solution design projects. Their results focus on three activities supported by the tool, highlighting that the positive expectations held by the architects are underlined by the challenges they currently experience. For example, the architects relish the potential for ML support on a laborious task, but note that the current design of the tool does not facilitate coordination amongst teammates and are concerned that the tool — based on data from historical cases — limits their ability to propose solutions that align with emerging market trends. One of the main takeaways the authors draw from their findings is that ML should not be envisioned as a tool to supplant human decision-making; rather, the capabilities of ML and those of humans should complement one another, accounting for the other’s deficiencies.<p>
   
   <p>This paper provides several solid examples for how the design of ML-based applications do not support the work practices of the IT architects. The authors go at lengths to signal the continuity between their work and past studies on “situated work practices,” as they call it. It leaves me wondering what aspects of ML make the problem of designing for practices any different or more difficult for traditional software systems.<p>",
