--- a/about.qmd
+++ b/about.qmd
@@ -1,26 +1,30 @@
+---
+title: About me
+---
+
 I am a DPhil (PhD) candidate in Computer Science at the University of Oxford. I am based in the [Human-Centred Computing](https://hcc.cs.ox.ac.uk/) research theme
 
 Additionally, I lead the [Responsible Technology Institute Student Network](https://www.rti.ox.ac.uk/student-network/), an interdisciplinary and international student-led organisation that connects graduate students who share an interest in responsible innovation.
 
 ### Research Interests
 
-- Human-centered data science
-- Human-AI interaction
-- Sociotechnical studies
+-   Human-centered data science
+-   Human-AI interaction
+-   Sociotechnical studies
 
 ### Education
 
-**DPhil in Computer Science**, 2021 -- Present  
-University of Oxford | Oxford, UK
+**DPhil in Computer Science**, 2021 -- Present\
+University of Oxford \| Oxford, UK
 
-**MSc in Science, Technology, & Society**, 2020 -- 2021  
-University College London | London, UK
+**MSc in Science, Technology, & Society**, 2020 -- 2021\
+University College London \| London, UK
 
-**Master of Business Administration**, 2019 -- 2020  
-University of Oxford | Oxford, UK
+**Master of Business Administration**, 2019 -- 2020\
+University of Oxford \| Oxford, UK
 
-**BS in Biomedical Engineering**, 2012 -- 2016  
-Rensselaer Polytechnic Institute | Troy, US
+**BS in Biomedical Engineering**, 2012 -- 2016\
+Rensselaer Polytechnic Institute \| Troy, US
 
 ### Acknowledgements
 
