--- a/publications.qmd
+++ b/publications.qmd
@@ -1,4 +1,12 @@
 ---
-
+title: "Research"
+output: html_document
 ---
 
+### Journal Articles
+
+**Reinmund, Tyler**, Pericle Salvini, Lars Kunze, Marina Jirotka, and Alan F. T. Winfield. 2023. "Variable Autonomy Through Responsible Robotics: Design Guidelines and Research Agenda." *ACM Transactions on Human-Robot Interaction*. <https://doi.org/10.1145/3636432>.
+
+### Conference Papers
+
+**Reinmund, Tyler**. 2023. "Designing Data Science Software for Social Care Organisations." In *Extended Abstracts of the 2023 CHI Conference on Human Factors in Computing Systems*. <https://doi.org/10.1145/3544549.3577062>.
